[gd_scene load_steps=11 format=3 uid="uid://tced2gfbrgy"]

[ext_resource type="Script" path="res://Assets/Scripts/BoxButton.gd" id="1_o4uq1"]
[ext_resource type="Material" uid="uid://dcv2iepys7y3b" path="res://Assets/Materials/Metalic_Smooth.tres" id="2_d7tcl"]
[ext_resource type="Material" uid="uid://bsa0csbf736mp" path="res://Assets/Materials/Button_Inactive.tres" id="2_le7nt"]
[ext_resource type="AudioStream" uid="uid://dt6y3s3qs8w6c" path="res://Sounds/Box_Button/button_off.ogg" id="4_ao5ab"]
[ext_resource type="AudioStream" uid="uid://brrgr1tk417eh" path="res://Sounds/Box_Button/button_on.ogg" id="5_snqgl"]

[sub_resource type="BoxMesh" id="BoxMesh_1ekph"]
material = ExtResource("2_d7tcl")
size = Vector3(1.2, 0.2, 1.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_hjb3y"]
size = Vector3(1.2, 0.2, 1.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_gb0xb"]
size = Vector3(1.1, 0.2, 1.1)

[sub_resource type="BoxMesh" id="BoxMesh_4eyk3"]
material = ExtResource("2_le7nt")
size = Vector3(1.1, 0.2, 1.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_y04ri"]
size = Vector3(0.8, 0.2, 0.8)

[node name="BoxButton" type="Area3D"]
script = ExtResource("1_o4uq1")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="ButtonOutside" type="MeshInstance3D" parent="StaticBody3D"]
mesh = SubResource("BoxMesh_1ekph")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_hjb3y")

[node name="Button" type="AnimatableBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Button"]
shape = SubResource("BoxShape3D_gb0xb")

[node name="ButtonMesh" type="MeshInstance3D" parent="Button"]
mesh = SubResource("BoxMesh_4eyk3")
skeleton = NodePath("../..")

[node name="ButtonLight" type="OmniLight3D" parent="Button/ButtonMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.095, 0)
light_color = Color(0.780392, 0.243137, 0.294118, 1)
light_energy = 1.323
light_size = 0.8

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0)
shape = SubResource("BoxShape3D_y04ri")

[node name="ButtonDeactivateSFX" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_ao5ab")
volume_db = -8.0

[node name="ButtonActivateSFX" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_snqgl")
volume_db = -8.0

[connection signal="body_entered" from="." to="." method="box_entered"]
[connection signal="body_exited" from="." to="." method="box_exited"]
